src/components/Profile/profile.css
:root {
	--name-size: 32px;
	--title-size: 19px;
	--item-size: 16px;
	--send-size: 16px;
}

.content_wrapper {
	padding: 0 20px;

	display: flex;
    /* flex: auto; */
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.content {
	max-width: 1200px;
	width: 100%;
	min-height: calc(100vh - 99px);
	
    display: flex;
	
	/* border: 1px solid #aaafff; */

}

.profile__component {
	padding: 30px 20px;
	width: 100%;
}

.info {
	display: flex;
	justify-content: space-evenly;
	width: 100%;
}

.desc {
	display: flex;
	flex-direction: column;

	width: 60%;
	/* max-width: 450px; */
}

.dog__desc {
	margin-right: 15px;

	max-width: 280px;
	width: 280px;

	display: flex;
	flex-direction: column;
	align-items: center;

	border-radius: 5px;
	
	background: #F0F0F0;
}

.dog__desc__content {
	padding: 15px 0;
	width: 80%;
}

.dog__name {
	margin-bottom: 10px;

	font-size: var(--name-size);
	font-weight: 700;
}

.dog__photo {
	width: 100%;
	margin: 0 auto;
	border-radius:5px;
}

.send {
	margin-top: 30px;
	width: 100%;
	height: 50px;
	border-radius: 5px;

	font-size: var(--send-size);
	font-weight: 700;

	text-transform: uppercase;

	border: 1px solid #000;
}

.desc__content {
	width: 100%;

	margin-bottom: 30px;

	display: flex;
	flex-direction: column;
	align-items: center;

	border-radius: 5px;

	background: #F0F0F0;
}

.desc__content:last-child {
	margin-bottom: 0;
}

.info__wrapper {
	width: 90%;

	border-bottom: 1px solid #dbdbdb;
}

.info__wrapper:last-child {
	border-bottom: none;
}

.profile__subtitle {
	margin: 20px 0 0;

	font-size: var(--title-size);
	font-weight: 700;
}

.items__wrapper {
	padding: 10px 0 20px;
}

.item {
	font-size: var(--item-size);
	padding: 4px 0;
}

.item_mini {
	line-height: 1.15;
	margin-left:20px;
}

.user {
	width: 100%;
	height: 150px;
	background: #F0F0F0;
	border-radius: 5px;
	margin-top: 20px;
}

@media (max-width: 1000px) {
	:root {
		--name-size: 25px;
		--title-size: 15px;
		--item-size: 13px;
	}

	.dog__desc {
		width: 225px;
	}

	.desc {
		width: 50%;
	}

	.dog__photo {
		max-width: 200px;
		margin: 0 auto;
		border-radius:5px;
	}

	.item {
		padding: 2px 0;
	}
}

@media (max-width: 660px) {
	:root {
		--name-size: 32px;
		--title-size: 18px;
		--item-size: 14px;
		--send-size: 16px;
	}

	.profile__component {
		padding: 30px 50px;
	}

	.info {
		flex-direction: column;
	}

	.dog__desc__content {
		width: 75%;
	}

	.content_wrapper {
		padding: 0;
	}

	.dog__desc {
		width: 100%;
		max-width: none;

		margin: 0;
	}

	.dog__photo {
		max-width: none;
	}

	.desc {
		width: 100%;
		max-width: none;
	}

	.desc__content {
		margin-top: 20px;

		margin-bottom: 0;
	}

	.info__wrapper {
		width: 75%;
	}
}

@media (max-width: 500px) {
	:root {
		--name-size: 23px;
		--title-size: 13px;
		--item-size: 11px;
		--send-size: 13px;
	}

	.profile__component {
		padding: 30px;
	}
}

